concord_macros/tests/trybuild/fail/codegen/reserved_sse_request_invalid.rs
use concord_macros::api;

api! {
    client ReservedSseRequestInvalidApi { base "https://example.com" }

    POST Send(body: Sse<String>)
        path ["send"]
        -> Json<()>
}

fn main() {}
